# ip400_server

./: .gitignore  README.md  __init__.py  ip400_server.py  ip4c_utils.py  local_command_manager.py  nodeinfo.json  photo_manager.py  photo_sender.py  pyproject.toml  requirements.txt  send_photo.py  setup.py
config/: ip400.env.example
scripts/: install_ip400.sh
systemd/: ip400_server.service  ip400_spi.service
