[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ip400-server"
version = "0.1.0"
description = "IP400 Server for processing and displaying APRS and other radio packet data"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask>=2.0.0",
]

[project.scripts]
ip400-server = "ip400_server:main"

[project.urls]
Homepage = "https://github.com/yourusername/ip400-server"
Bug Tracker = "https://github.com/yourusername/ip400-server/issues"
